Admin quase pronto

--- a/src/app/_components/conteudo/admin/professores/editar-professores/editar-professores.component.html
+++ b/src/app/_components/conteudo/admin/professores/editar-professores/editar-professores.component.html
@@ -1,10 +1,10 @@
 <div class="card">
-  <h3 class="text-center">Novo professor</h3>
+  <h3 class="text-center">Editar professor</h3>
 
-  <form #formulario="ngForm" (ngSubmit)="cadastrar()">
+  <form #formulario="ngForm" (ngSubmit)="finalizarCadastro()">
 
     <div class="form-group row">
-      <label class="col-2 col-form-label">Curso:</label>
+      <label class="col-2 col-form-label">Professor:</label>
       <div class="col-10">
         <input type="text" required class="form-control" name="nome" placeholder="Nome do professor" [(ngModel)]="professor.nome">
       </div>
@@ -20,7 +20,7 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Endereço:</label>
       <div class="col-10">
-        <input type="text" required class="form-control" name="endereco" placeholder="Endereço" ngModel>
+        <input type="text" required class="form-control" name="endereco" placeholder="Endereço" [(ngModel)]="professor.endereco">
       </div>
     </div>
     <div class="form-group row">
@@ -36,22 +36,27 @@
       <label class="col-2 col-form-label">Departamento:</label>
       <div class="col-10">
         <select required class="form-control" name="departamento" [(ngModel)]="professor.departamento">
-          <option *ngFor="let item of departamento"> {{item.nome}}</option>
+          <option *ngFor="let item of departamento" value={{item.idDepartamento}}> {{item.nome}}</option>
         </select>
       </div>
     </div>
 
+    <div class="form-group row">
+        <label class="col-2 col-form-label">Coordenador:</label>
+        <div class="col-10">
+          <select required class="form-control" name="coordenador" [(ngModel)]="professor.coordenador">
+            <option disabled></option>
+            <option *ngFor="let item of curso"> {{item.nome}}</option>
+          </select>
+        </div>
+      </div>
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Opções:</label>
       <div class="col-10">
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" name="admin" ngModel>
+          <input type="checkbox" class="form-check-input" name="admin" [(ngModel)]="professor.admin">
           <label class="form-check-label" >Administrador</label>
-        </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" name="coordernador" [(ngModel)]="professor.coordenador">
-          <label class="form-check-label">Coordenador</label>
         </div>
       </div>
     </div>
@@ -59,10 +64,10 @@
     <div class="d-flex flex-row-reverse">
       <input type="reset" class="btn btn-outline-danger" value="Resetar">
       <ng-container *ngIf="formulario.valid; else elseTemplate">
-        <input type="submit" class="btn btn-outline-primary" value="Cadastrar">
+        <input type="submit" class="btn btn-outline-primary" value="Editar">
       </ng-container>
       <ng-template #elseTemplate>
-        <input type="submit" disabled class="btn btn-outline-primary" value="Cadastrar">
+        <input type="submit" disabled class="btn btn-outline-primary" value="Editar">
       </ng-template>
     </div>
   </form>
