--- a/src/app/_components/conteudo/admin/alunos/editar-alunos/editar-alunos.component.html
+++ b/src/app/_components/conteudo/admin/alunos/editar-alunos/editar-alunos.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h3 class="text-center">Novo aluno</h3>
+  <h3 class="text-center">Editar aluno</h3>
 
   <form #formulario="ngForm" (ngSubmit)="finalizarEdicao()">
 
@@ -89,10 +89,10 @@
     <div class="d-flex flex-row-reverse">
       <input type="reset" class="btn btn-outline-danger" value="Resetar">
       <ng-container *ngIf="formulario.valid; else elseTemplate">
-        <input type="submit" class="btn btn-outline-primary" value="Cadastrar">
+        <input type="submit" class="btn btn-outline-primary" value="Editar">
       </ng-container>
       <ng-template #elseTemplate>
-        <input type="submit" disabled class="btn btn-outline-primary" value="Cadastrar">
+        <input type="submit" disabled class="btn btn-outline-primary" value="Editar">
       </ng-template>
     </div>
   </form>
