Token put aluno

--- a/src/app/_components/conteudo/admin/alunos/alunos.component.html
+++ b/src/app/_components/conteudo/admin/alunos/alunos.component.html
@@ -22,7 +22,7 @@
         <td>{{ i.nome }}</td>
         <td>{{ i.telefone }}</td>
         <td>{{ i.email }}</td>
-        <td>{{ i.curso }}</td>
+        <td>{{ i.nomeCurso }}</td>
         <td>{{ i.coordenador }}</td>
         <td>
           <button type="button" (click)="editar(i)" class="btn btn-outline-primary btn">
