--- a/src/app/_components/conteudo/admin/alunos/editar-alunos/editar-alunos.component.html
+++ b/src/app/_components/conteudo/admin/alunos/editar-alunos/editar-alunos.component.html
@@ -47,7 +47,7 @@
       <label class="col-2 col-form-label">Curso:</label>
       <div class="col-10">
         <select required class="form-control" name="curso" [(ngModel)]="aluno.curso">
-          <option *ngFor="let item of cursos"> {{item.nome}}</option>
+          <option *ngFor="let item of cursos" [value]=item.idCurso> {{item.nome}}</option>
         </select>
       </div>
     </div>
