--- a/src/app/_components/conteudo/admin/departamentos/editar-departamento/editar-departamento.component.html
+++ b/src/app/_components/conteudo/admin/departamentos/editar-departamento/editar-departamento.component.html
@@ -20,7 +20,7 @@
         <label class="col-2 col-form-label">Instituto:</label>
         <div class="col-10">
           <select required class="form-control" name="instituto" [(ngModel)]="departamento.instituto">
-            <option *ngFor="let item of instituto"> {{item.nome}}</option>
+            <option *ngFor="let item of instituto" value="item.idInstituto"> {{item.nome}}</option>
           </select>
         </div>
       </div>
