--- a/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
+++ b/src/app/_components/conteudo/admin/disciplinas/editar-disciplinas/editar-disciplinas.component.html
@@ -24,8 +24,8 @@
     <div class="form-group row">
       <label class="col-2 col-form-label">Curso:</label>
       <div class="col-10">
-        <select required class="form-control" name="curso" [(ngModel)]="disciplina.cursow">
-
+        <select required class="form-control" name="curso" [(ngModel)]="disciplina.curso">
+          <option disabled></option>
           <option *ngFor="let item of cursos" value={{item.idCurso}}> {{item.nome}}</option>
         </select>
       </div>
@@ -48,6 +48,7 @@
       <label class="col-2 col-form-label">Professor:</label>
       <div class="col-10">
         <select required class="form-control" name="professor" [(ngModel)]="disciplina.professor">
+            <option disabled></option>
           <option *ngFor="let item of professores" value="{{item.idProfessor}}"> {{item.nome}}</option>
         </select>
       </div>
